tests/fail/assigner1.dit
A {
    String value;
}

A a(v) {
    value = v;
}

A obj;
obj = a('1', '2');